--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -144,7 +144,7 @@
     }
 
     & .phone-bar {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       z-index: 99;
